# gwik

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
spec/: draft.md  spec.md
src/: cli.rs  config.rs  git.rs  main.rs  scanner.rs  shell.rs
src/commands/: cd.rs  close.rs  init.rs  list.rs  mod.rs  open.rs
tests/: cd_test.rs  close_test.rs  init_test.rs  list_test.rs  open_test.rs
tests/common/: mod.rs
