[package]
name = "gwik"
version = "0.0.5"
edition = "2021"
description = "A CLI tool for simplified Git worktree management"
license = "MIT"
repository = "https://github.com/furon-kuina/gwik"
homepage = "https://github.com/furon-kuina/gwik"
keywords = ["git", "worktree", "cli", "productivity"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [".github/", "spec/", "tests/"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.24.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/gwik-{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
